--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPL Teams ELO Analysis Dashboard</title>
+    <title>IPL Teams ELO Analysis Dashboard by Shivam</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -249,7 +249,7 @@
     <div class="container">
         <header class="fade-in">
             <h1><i class="fas fa-trophy"></i> IPL Teams ELO Analysis Dashboard by Shivam</h1>
-            <p class="subtitle">Interactive visualization of IPL team performance through ELO ratings over time</p>
+            <p class="subtitle">Interactive visualization of IPL team performance through ELO ratings from 2008 to 2025</p>
         </header>
         
         <div class="dashboard">
@@ -655,3 +655,4 @@
 </body>
 
 </html>
+
